Fix Jumbotron head on IE

--- a/styles/_jumbotron.scss
+++ b/styles/_jumbotron.scss
@@ -11,7 +11,6 @@
     h1 {
         font-size: 3em;
         font-weight: 200;
-        padding: 0 0.75em;
         @media (orientation: portrait) and (max-width: 767px) {
             font-size: 2em;
         }
@@ -42,8 +41,6 @@
 }
 
 .jumbotron__content {
-    position: absolute;
-    width: calc(100% - 17px);
     text-align: center;
 }
 
